appId: ${MAESTRO_APP_ID}
---
- launchApp

- extendedWaitUntil:
    visible: "Student Dashboard"
    timeout: 30000

- tapOn: "Resume Attempt"

- extendedWaitUntil:
    visible: "Current question"
    timeout: 30000

- assertVisible: "Current question"
